main parle a fml technique