@@ -1,107 +1,72 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>tp5-final</groupId>
-  <artifactId>tp5-final</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>TP5-final</name>
-  <build>
-    <sourceDirectory>src</sourceDirectory>
-    <testSourceDirectory>test</testSourceDirectory>
-    <outputDirectory>bin</outputDirectory>
-    <plugins>
-      <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-antrun-plugin</artifactId>
-            <version>1.1</version>
-            <executions>
-               <execution>
-                  <id>compile</id>
-                  <phase>compile</phase>
-                  <goals>
-                     <goal>run</goal>
-                  </goals>
-                  <configuration>
-                    <tasks>
-                      <move todir="pluginrepo/creatures">
-                        <fileset dir="bin/creatures">
-                          <include name="BouncingCreature.class"/>
-                          <include name="EnergySearchingCreature.class"/>
-                          <include name="SmartCreature.class" />
-                          <include name="StupidCreature.class" />
-                        </fileset>
-                      </move>
-                  </tasks>
-                  </configuration>
-               </execution>
-               <execution>
-                  <id>test</id>
-                  <phase>default-testCompile</phase>
-                  <goals>
-                     <goal>run</goal>
-                  </goals>
-                  <configuration>
-                    <tasks>
-                      <echo message="dan"/>
-                      <move todir="bin/creatures">
-                        <fileset dir="pluginrepo/creatures">
-                          <include name="BouncingCreature.class"/>
-                          <include name="EnergySearchingCreature.class"/>
-                          <include name="SmartCreature.class" />
-                          <include name="StupidCreature.class" />
-                        </fileset>
-                      </move>
-                  </tasks>
-                  </configuration>
-               </execution>
-               <execution>
-                  <id>post-test</id>
-                  <phase>post-test</phase>
-                  <goals>
-                     <goal>run</goal>
-                  </goals>
-                  <configuration>
-                    <tasks>
-                      <move todir="pluginrepo/creatures">
-                        <fileset dir="bin/creatures">
-                          <include name="BouncingCreature.class"/>
-                          <include name="EnergySearchingCreature.class"/>
-                          <include name="SmartCreature.class" />
-                          <include name="StupidCreature.class" />
-                        </fileset>
-                      </move>
-                  </tasks>
-                  </configuration>
-               </execution>
-            </executions>
-         </plugin>
-         
-       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>exec-maven-plugin</artifactId>
-        <version>1.3.2</version>
-        <executions>
-          <execution>
-            <goals>
-              <goal>java</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <mainClass>main.Launcher</mainClass> 
-        </configuration>
-       </plugin>   
-    </plugins>
-   </build>
-    <dependencies>
-    <dependency>
-    	 <groupId>junit</groupId>
-   		 <artifactId>junit</artifactId>
-   		 <version>4.12</version>
-	    </dependency>
-	    <dependency>
-         <groupId>org.mockito</groupId>
-         <artifactId>mockito-core</artifactId>
-         <version>1.10.19</version>
-      </dependency>
+
+  <groupId>fr.unice.deptinfo</groupId>
+  <artifactId>simu-generator</artifactId>
+  <version>0.0.1</version>
+  <packaging>jar</packaging>
+
+  <name>simu-generator</name>
+  <url>http://maven.apache.org</url>
+
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+<repositories>
+		<repository>
+          	<id>releases</id>
+          	<name>I3S Maven Releases Repository</name>
+          	 <url>http://nyx.unice.fr/nexus/content/repositories/i3s-public</url>	
+		</repository>
+	</repositories>
+  <dependencies>
+  <dependency>
+    <groupId>fr.unice.deptinfo</groupId>
+  <artifactId>familiar-interpreter</artifactId>
+  <version>0.0.1</version>
+  </dependency>
+  <dependency>
+  <groupId>fr.unice.deptinfo</groupId>
+  <artifactId>maven-compiler</artifactId>
+  <version>0.0.1</version>
+  </dependency>
   </dependencies>
+  
+  <profiles>
+  <profile>
+      <id>run</id>
+      <build>
+         <!--<sourceDirectory>src</sourceDirectory>
+         <testSourceDirectory>test</testSourceDirectory>
+         <outputDirectory>bin</outputDirectory>-->
+        <defaultGoal>compile</defaultGoal>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>exec</goal>
+                </goals>
+                <phase>compile</phase>
+              </execution>
+            </executions>
+            <configuration>
+               <!-- argLine>-Xms1000m -Xmx1000m -XX:MaxPermSize=2048m</argLine--> 
+              <executable>java</executable>
+              <arguments>
+                <argument>-classpath</argument>
+                <!-- automatically creates the classpath using all project dependencies, 
+                     also adding the project build directory -->
+                <classpath />
+                <argument>main.App</argument>
+              </arguments>   
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>  
 </project>
